--- a/zzz/SwiftPublish.config
+++ b/zzz/SwiftPublish.config
@@ -1,4 +1,10 @@
-﻿<?xml version="1.0"?>
+﻿<!--
+
+Purpose: This include file contains settings to disable indexing and enable Parallel Publishing.
+
+Important: Review each of the settings in this file and consider if some of the optimizations should be commented out due to the specifics of your solution. Also read this article before you want to enable Paraller Publishing http://www.sitecore.net/learn/blogs/technical-blogs/reinnovations/posts/2014/03/enabling-parallel-publishing.aspx
+
+-->
 <configuration xmlns:patch="http://www.sitecore.net/xmlconfig/">
   <sitecore>
     <settings>
